--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "Ecom Store" %></title>
+    <%= content_for(:title) || "Ecom Store" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -34,7 +34,10 @@
           <% if logged_in? %>
             <%= link_to "My Orders", orders_path, class: "nav-link" %>
             <%= link_to "Profile", current_user, class: "nav-link" %>
-            <%= link_to "Logout", logout_path, data: { turbo_method: :delete}, class: "nav-link" %>
+            <% if current_user.admin? %>
+              <%= link_to "Admin", admin_root_path, class: "nav-link admin-link" %>
+            <% end %>
+            <%= link_to "Logout", logout_path, method: :delete, class: "nav-link" %>
           <% else %>
             <%= link_to "Login", login_path, class: "nav-link" %>
             <%= link_to "Sign Up", signup_path, class: "nav-link" %>
