--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= content_for(:title) || "Ecom Store" %></title>
+    <title><%= content_for(:title) || "Ecom Store" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= yield :head %>
 
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
     <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
@@ -37,7 +35,7 @@
             <% if current_user.admin? %>
               <%= link_to "Admin", admin_root_path, class: "nav-link admin-link" %>
             <% end %>
-            <%= link_to "Logout", logout_path, method: :delete, class: "nav-link" %>
+            <%= link_to "Logout", logout_path,  data: {turbo_method: :delete}, class: "nav-link" %>
           <% else %>
             <%= link_to "Login", login_path, class: "nav-link" %>
             <%= link_to "Sign Up", signup_path, class: "nav-link" %>
